Fixed play-button on IOS Safari

--- a/app/static/css/_home.scss
+++ b/app/static/css/_home.scss
@@ -54,12 +54,16 @@
     &.active {
       visibility: visible;
       background-color: rgba(0, 0, 0, 0.5);
+
+      iframe {
+        display: block;
+      }
     }
 
     text-align: center;
 
     iframe {
-      display: block;
+      display: none;
       width: 670px;
       height: 350px;
     }
